# ChangeLog for net-libs/courier-authlib
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/courier-authlib/ChangeLog,v 1.25 2005/01/31 04:14:07 swtaylor Exp $

  30 Jan 2005; Scott W Taylor <swtaylor@gentoo.org>
  courier-authlib-0.52-r1.ebuild, courier-authlib-0.53.ebuild:
  mostly cosmetic changes. also puts authldap.schema in /etc/openldap/schema/

  30 Jan 2005; Scott W Taylor <swtaylor@gentoo.org>
  courier-authlib-0.52-r1.ebuild:
  initial stable keywording

*courier-authlib-0.53 (30 Jan 2005)

  30 Jan 2005; Scott W Taylor <swtaylor@gentoo.org>
  +courier-authlib-0.53.ebuild:
  bump to 0.53

*courier-authlib-0.52-r1 (07 Jan 2005)

  07 Jan 2005; Scott W Taylor <swtaylor@gentoo.org>
  +courier-authlib-0.52-r1.ebuild:
  build authshadow (bug 71909) and use /usr/$(get_libdir) for better arch support

  06 Jan 2005; Jeremy Huddleston <eradicator@gentoo.org>
  courier-authlib-0.52.ebuild:
  multilib and cross-compilation fixes.

  01 Jan 2005; Tuan Van <langthang@gentoo.org> courier-authlib-0.52.ebuild:
  add "libtoolize --copy --force"

  01 Jan 2005; Tuan Van <langthang@gentoo.org> files/configure-db4.patch:
  adjust patch for the newer version.

*courier-authlib-0.52 (01 Jan 2005)

  01 Jan 2005; Scott W Taylor <swtaylor@gentoo.org>
  -courier-authlib-0.51_pre.ebuild, +courier-authlib-0.52.ebuild:
  courier-authlib 0.52 released

  24 Dec 2004; Markus Rothe <corsair@gentoo.org>
  courier-authlib-0.51_pre.ebuild:
  Added ~ppc64 to KEYWORDS; bug #75450

  22 Dec 2004; Tuan Van <langthang@gentoo.org>
  courier-authlib-0.51_pre.ebuild:
  arm/hppa/ia64/s390 keywords on behalf of vapier.

  15 Dec 2004; Scott W Taylor <swtaylor@gentoo.org>
  courier-authlib-0.50.20041203.ebuild:
  change keepdir in the other one too

  15 Dec 2004; Scott W Taylor <swtaylor@gentoo.org>
  courier-authlib-0.51_pre.ebuild:
  keep more specific dir, and one that doesn't collide with courier
