@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/courier-authlib
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/courier-authlib/ChangeLog,v 1.25 2005/01/31 04:14:07 swtaylor Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/courier-authlib/ChangeLog,v 1.26 2005/01/31 23:50:08 swtaylor Exp $
+
+  31 Jan 2005; Scott W Taylor <swtaylor@gentoo.org>
+  courier-authlib-0.52-r1.ebuild, courier-authlib-0.53.ebuild:
+  changed sed calls for more consistent edits.
+  make sure userdb is found and migrated
+  call makeuserdb after the install, if userdb exists
 
   30 Jan 2005; Scott W Taylor <swtaylor@gentoo.org>
   courier-authlib-0.52-r1.ebuild, courier-authlib-0.53.ebuild:
